# ere

./: Cargo.toml
.github/workflows/: test-zkvm-sp1-cluster.yml
crates/dockerized/: build.rs
crates/dockerized/common/: build.rs
crates/dockerized/common/src/: zkvm.rs
crates/dockerized/compiler/: Cargo.toml
crates/dockerized/compiler/src/: main.rs
crates/dockerized/dockerized/: build.rs
crates/dockerized/dockerized/src/: docker.rs  lib.rs
crates/dockerized/server/: Cargo.toml
crates/dockerized/server/src/: main.rs  server.rs
crates/dockerized/src/: compiler.rs  lib.rs  zkvm.rs
crates/dockerized/src/util/: docker.rs
crates/zkvm-interface/: Cargo.toml
crates/zkvm-interface/src/: zkvm.rs
crates/zkvm-interface/src/zkvm/: resource.rs
crates/zkvm/risc0/src/: zkvm.rs
crates/zkvm/sp1-cluster/: Cargo.toml  build.rs
crates/zkvm/sp1-cluster/platform/: Cargo.toml
crates/zkvm/sp1-cluster/platform/src/: lib.rs
crates/zkvm/sp1-cluster/src/: compiler.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/sp1-cluster/src/zkvm/: client.rs  error.rs
crates/zkvm/sp1/src/: program.rs
crates/zkvm/sp1/src/zkvm/: sdk.rs
crates/zkvm/zisk/src/: zkvm.rs
docker/sp1-cluster/: Dockerfile.base  Dockerfile.compiler  Dockerfile.server
scripts/: rebuild_sp1_cluster_docker.sh  run_sp1_cluster.sh
tests/sp1-cluster/basic/: Cargo.toml
tests/sp1-cluster/basic/src/: main.rs
