[package]
name = "ere-sp1-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
hex.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tonic = "0.12"
tracing.workspace = true

# Redis client for artifact storage
redis = { workspace = true, features = ["tokio-comp", "cluster-async"] }

# Unique ID generation
ulid.workspace = true

# Compression for artifact uploads
zstd = "0.13"

# bincode 1.x for deserializing proofs from SP1 Cluster (cluster uses bincode 1.x)
bincode1 = { package = "bincode", version = "1.3" }

# SP1 dependencies (for verification and stdin serialization)
sp1-sdk = { workspace = true, optional = true }

# Local dependencies
ere-compile-utils = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true
ere-sp1 = { workspace = true, optional = true }

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true
tonic-build = "0.12"

[features]
default = ["compiler", "zkvm"]
compiler = ["dep:ere-compile-utils", "dep:ere-sp1", "ere-sp1/compiler"]
zkvm = ["dep:sp1-sdk", "dep:ere-sp1", "ere-sp1/zkvm"]

[lints]
workspace = true
